--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
    <h1>Palmeiras</h1> 
+   <p>Esse site é direcionado para o Palmeiras, um time brasileiro que foi fundado no ano de 1914</p>
 </body>
 </html>
