--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<img src= "arquivo.png">
    <h1>Palmeiras</h1> 
    <p>Esse site é direcionado para o Palmeiras, um time brasileiro que foi fundado no ano de 1914, em questão de titulos
     o Palmeiras é o maior time brasileiro da atualidade, atualmente estamos fazendo parte de algumas competições, Brasileirão Serie A
