--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img src= "arquivo.png">
    <h1>Palmeiras</h1> 
+   img src="Palmeiras_logo.svg.png"
    <p>Esse site é direcionado para o Palmeiras, um time brasileiro que foi fundado no ano de 1914, em questão de titulos
     o Palmeiras é o maior time brasileiro da atualidade, atualmente estamos fazendo parte de algumas competições, Brasileirão Serie A
 Copa do Brasil, Libertadores e a mais importante a Copa Do Mundo De Clubes </p>
