--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Palmeiras</h1> 
-   img src="Palmeiras_logo.svg.png"
+   <img src="Palmeiras_logo.svg.png">
    <p>Esse site é direcionado para o Palmeiras, um time brasileiro que foi fundado no ano de 1914, em questão de titulos
     o Palmeiras é o maior time brasileiro da atualidade, atualmente estamos fazendo parte de algumas competições, Brasileirão Serie A
 Copa do Brasil, Libertadores e a mais importante a Copa Do Mundo De Clubes </p>
