--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Palmeiras</h1> 
+   <h1>Bem-vindo ao Verdão: A Casa Oficial da Sociedade Esportiva Palmeiras
+     E Allianz Parque: Um Palco de Grandes Emoções
+   </h1> 
    <img src="Palmeiras_logo.svg.png">
-   <p>Esse site é direcionado para o Palmeiras, um time brasileiro que foi fundado no ano de 1914, em questão de titulos
-    o Palmeiras é o maior time brasileiro da atualidade, atualmente estamos fazendo parte de algumas competições, Brasileirão Serie A
-Copa do Brasil, Libertadores e a mais importante a Copa Do Mundo De Clubes </p>
+   <p>Inaugurado em 2014, o Allianz Parque é mais do que um estádio moderno — é o templo do futebol palmeirense. Com capacidade para mais de 40 mil torcedores, o local oferece uma estrutura de alto padrão, tecnologia de ponta e uma atmosfera vibrante a cada partida. O estádio rapidamente se tornou um diferencial competitivo para o Palmeiras, transformando jogos em casa em verdadeiros espetáculos. Além de sediar confrontos históricos e decisões importantes, o Allianz também recebe shows e eventos, consolidando-se como um dos maiores centros de entretenimento da América Latina.
+
+</p>
+   <p> Sociedade Esportiva Palmeiras é muito mais do que um clube de futebol
+     — é uma paixão que atravessa gerações e une milhões de torcedores pelo Brasil e pelo mundo. 
+     Neste espaço oficial, você acompanha todas as novidades do Verdão: notícias atualizadas, calendário de jogos, resultados, contratações, conteúdos exclusivos, história e tudo sobre o dia a dia do clube. Seja no gramado do Allianz Parque ou nas arquibancadas vibrantes, o Palmeiras segue fazendo história com raça, tradição e títulos. Avanti, Palestra!</p>
+     <h2>Palmeiras: Tradição de Títulos e Lições nos Rebaixamentos</h2>
+     <p>A Sociedade Esportiva Palmeiras é, sem dúvida, um dos clubes mais vencedores do futebol brasileiro, com um vasto acervo de conquistas que inclui 12 Campeonatos Brasileiros (1960, 1967 [Taça Brasil], 1969, 1972, 1973, 1993, 1994, 2016, 2018, 2022 e 2023), além de 3 Copas Libertadores (1999, 2020 e 2021), 4 Copas do Brasil (1998, 2012, 2015 e 2020), 1 Supercopa do Brasil (2023), entre vários outros títulos nacionais e internacionais. No entanto, o Verdão também encarou momentos de dificuldade ao ser rebaixado à Série B duas vezes: em 2002 e em 2012. Em 2002, falhou na elite, mas reagiu prontamente conquistando a Série B em 2003. Já em 2012, apesar de erguer a taça da Copa do Brasil invicto, terminou com campanha fraca no Brasileirão – com 22 derrotas e quedas matematicamente confirmadas antes da última rodada – o que resultou no segundo descenso. O Palmeiras, porém, se reabilitou rapidamente, voltando à Série A em 2013 como campeão da B, e dali iniciou uma fase dourada, elevando ainda mais seu currículo e sua relevância no futebol nacional e continental.</p>
+     <h3>A Força da Torcida Alviverde</h3>
+     <p>A torcida do Palmeiras é uma das mais apaixonadas e engajadas do Brasil. Seja nos momentos de glória ou nos períodos mais difíceis, o apoio incondicional do torcedor palestrino nunca faltou. O Allianz Parque, casa do Verdão, vive constantemente lotado, empurrando o time com cantos, bandeiras e uma energia única. A Mancha Verde, principal torcida organizada, tem papel fundamental na cultura palmeirense e já foi reconhecida internacionalmente por sua vibração. Mais do que torcedores, os palmeirenses são parte ativa da história do clube, mantendo viva a tradição e a identidade do time dentro e fora de campo.
+</p>
+<h4>Categorias de Base: O Futuro Verde e Branco</h4>
+<p>O Palmeiras também se destaca pela excelência de suas categorias de base, que nos últimos anos vêm revelando grandes talentos para o futebol brasileiro e internacional. Atletas como Gabriel Jesus, Endrick e Danilo são exemplos recentes de jovens que saíram da base alviverde e brilharam no time principal, ganhando espaço também na Europa e na Seleção Brasileira. Com estrutura moderna e investimento contínuo, a base do Verdão é hoje uma referência no país, combinando formação esportiva com valores humanos e disciplina. Esse trabalho sólido garante não só um futuro promissor ao clube, mas também reforça o orgulho de formar craques com a essência palmeirense.</p>
+
 </body>
 </html>
