--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </p>
 <h4>Categorias de Base: O Futuro Verde e Branco</h4>
 <p>O Palmeiras também se destaca pela excelência de suas categorias de base, que nos últimos anos vêm revelando grandes talentos para o futebol brasileiro e internacional. Atletas como Gabriel Jesus, Endrick e Danilo são exemplos recentes de jovens que saíram da base alviverde e brilharam no time principal, ganhando espaço também na Europa e na Seleção Brasileira. Com estrutura moderna e investimento contínuo, a base do Verdão é hoje uma referência no país, combinando formação esportiva com valores humanos e disciplina. Esse trabalho sólido garante não só um futuro promissor ao clube, mas também reforça o orgulho de formar craques com a essência palmeirense.</p>
-
+<h5>Identidade e Tradição: Orgulho de Ser Palmeiras</h5>
+<p>Desde sua fundação em 1914 como Palestra Italia, o Palmeiras construiu uma história rica em valores, conquistas e resistência. O clube manteve-se fiel às suas raízes italianas, mas também mostrou capacidade de adaptação e superação, especialmente durante os períodos mais conturbados da história brasileira. A camisa verde e branca carrega não só as cores, mas também o peso de uma trajetória marcada por lutas, vitórias e uma legião de torcedores apaixonados. Ser palmeirense é mais do que torcer — é fazer parte de uma tradição centenária que valoriza raça, lealdade e amor ao futebol.</p>
 </body>
 </html>
