--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <img src="Palmeiras_logo.svg.png">
    <h1>Bem-vindo ao Verdão: A Casa Oficial da Sociedade Esportiva Palmeiras
      E Allianz Parque: Um Palco de Grandes Emoções
    </h1> 
-   <img src="Palmeiras_logo.svg.png">
+
    <p>Inaugurado em 2014, o Allianz Parque é mais do que um estádio moderno — é o templo do futebol palmeirense. Com capacidade para mais de 40 mil torcedores, o local oferece uma estrutura de alto padrão, tecnologia de ponta e uma atmosfera vibrante a cada partida. O estádio rapidamente se tornou um diferencial competitivo para o Palmeiras, transformando jogos em casa em verdadeiros espetáculos. Além de sediar confrontos históricos e decisões importantes, o Allianz também recebe shows e eventos, consolidando-se como um dos maiores centros de entretenimento da América Latina.
 
 </p>
@@ -26,5 +27,43 @@
 <p>O Palmeiras também se destaca pela excelência de suas categorias de base, que nos últimos anos vêm revelando grandes talentos para o futebol brasileiro e internacional. Atletas como Gabriel Jesus, Endrick e Danilo são exemplos recentes de jovens que saíram da base alviverde e brilharam no time principal, ganhando espaço também na Europa e na Seleção Brasileira. Com estrutura moderna e investimento contínuo, a base do Verdão é hoje uma referência no país, combinando formação esportiva com valores humanos e disciplina. Esse trabalho sólido garante não só um futuro promissor ao clube, mas também reforça o orgulho de formar craques com a essência palmeirense.</p>
 <h5>Identidade e Tradição: Orgulho de Ser Palmeiras</h5>
 <p>Desde sua fundação em 1914 como Palestra Italia, o Palmeiras construiu uma história rica em valores, conquistas e resistência. O clube manteve-se fiel às suas raízes italianas, mas também mostrou capacidade de adaptação e superação, especialmente durante os períodos mais conturbados da história brasileira. A camisa verde e branca carrega não só as cores, mas também o peso de uma trajetória marcada por lutas, vitórias e uma legião de torcedores apaixonados. Ser palmeirense é mais do que torcer — é fazer parte de uma tradição centenária que valoriza raça, lealdade e amor ao futebol.</p>
+<h6>Elenco do Palmeiras – Temporada 2025</h6>
+<li> Weverton(goleiro)
+  Marcelo Lomba(goleiro)
+   Mateus Oliveira(goleiro)
+  </li>
+  <li> Marcos Rocha(Lateral Direiro)
+  Giay(Lateral Direito)
+  Mayke(Lateral Direito)</li>
+  <li>Piquerez(Lateral Esquerdo)
+    Vanderlan(Lateral Esquerdo)</li>
+    <li>Gustavo Gomez (Zagueiro)
+      Murilo(Zagueiro)
+Naves(Zagueiro)
+Benedetti(Zagueiro)
+Bruno fuchs(Zagueiro)
+Micael(Zagueiro)
+    </li>
+<li>Emiliano Martinez(Volante)
+  Anibal Moreno(Volante)
+    Richard Rios(Volante)
+    Allan(Volante)
+    Raphael veiga(Meio campo)
+    Lucas Evangelista(Meio campo)
+    Mauricio(Meio campo)
+    Fabinho(Meio campo)
+    Romulo(meio campo)
+
+</li>
+<li>Paulinho(atacante)
+  Estevão(Ponta direita)
+  Facundo Torres(Ponta Esquerdo)
+  Luighi(Atacante)
+  Bruno Rodrigues(Ponta Esquerda)
+  Thalys(Ponta)
+  Felipe Anderson(Ponta/meia)
+  Vitor Roque(centroavante)
+  Flaco Lopez(centroavante)
+</li>
 </body>
 </html>
